# libwebrtc-sample

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libwebrtc/: audio_transport_factory.h
lib/win64/debug/: libwebrtc.dll.lib  webrtc.lib
lib/win64/release/: webrtc.lib
sample/: CMakeLists.txt
sample/sample1/: CMakeLists.txt
sample/sample1/src/: DesktopCapturerImpl.h  Enities.h  EventHander.h  LambaObserver.h  VideoTrackSource.cpp  VideoTrackSource.h  main.cpp
sample/sample2/: CMakeLists.txt
sample/sample2/src/: main.cpp
